# svr

./: .clang_complete  CMakeLists.txt  README.md
app/: CMakeLists.txt
app/source/: Application.cpp  Application.hpp  ColorMap.hpp  DataScale.hpp  Main.cpp
core/: CMakeLists.txt
core/include/SVR/: AABox.hpp  AstronomyMappings.hpp  Camera.hpp  ChannelTypes.hpp  ColorBar.hpp  ColorBarWidget.hpp  Common.hpp  Comparison.hpp  ComputeBuffer.hpp  ComputeDevice.hpp  ComputeKernel.hpp  ComputePlatform.hpp  ComputeProgram.hpp  ComputeSampler.hpp  ContainerWidget.hpp  DockingLayout.hpp  Endianness.hpp  Event.hpp  Exception.hpp  FitsFile.hpp  Framebuffer.hpp  Interface.hpp  Layout.hpp  LoadUtilities.hpp  Logging.hpp  Material.hpp  MemoryMappedFile.hpp  MenuBar.hpp  Mesh.hpp  MeshBuilder.hpp  PixelFormat.hpp  PrimitiveMode.hpp  Rectangle.hpp  Renderer.hpp  SceneNode.hpp  StatusBar.hpp  Texture.hpp  TextureFilter.hpp  TextureWidget.hpp  TextureWrapping.hpp  (+7 more)
core/source/: CLComputePlatform.cpp  ColorBarWidget.cpp  FitsFile.cpp  FreeTypeFont.cpp  FreeTypeFont.hpp  GLRenderer.cpp  GLRenderer.hpp  GLRendererBuffer.cpp  GLRendererShader.cpp  GLRendererTexture.cpp  LoadUtilities.cpp  Logging.cpp  UnixMemoryMappedFile.cpp
data/: CMakeLists.txt
data/fonts/dejavu/: langcover.txt  status.txt  unicover.txt
data/kernels/: cubeMappingsDouble.cl  cubeMappingsFloat.cl  raycast.cl  test.cl
data/shaders/: color.glslf  color.glslv  gammaCorrection.glslf  gammaCorrection.glslv  linearGradient.glslf  textured.glslf  textured.glslv
dicom/: CMakeLists.txt
dicom/source/: dcm2fits.cpp
dicomviewer/: CMakeLists.txt
dicomviewer/source/: DicomViewer.cpp  DicomViewer.hpp
scripts/: run.sh
tests/: CMakeLists.txt
tests/source/: Camera.cpp  ContainerWidget.cpp  DockingLayout.cpp  SceneNode.cpp  TextureWidget.cpp  Widget.cpp
